# EduiTelegramBot

./: .env.example  .gitignore  Makefile  docker-compose.yaml  docker-install.sh  pyproject.toml
chat/: __main__.py  app.py  auth.py  container.py  settings.py  web.py
chat/assistant/: llm.py  prompt.py  settings.py
chat/assistant/langfuse/: client.py  settings.py
chat/bot/: bot.py  middleware.py  settings.py
chat/bot/handlers/: assistant.py  registration.py  start.py  test.py
chat/bot/routers/: registration.py  start.py
chat/db/: crud.py  db.py  repository.py  service.py  settings.py
chat/db/models/: user.py
chat/handlers/: bot.py  conference.py  register.py
chat/model/: user.py
chat/routers/: base.py  llm.py  webhook.py
chat/scheduler/: base.py  notify.py
edu/routers/: llm.py
tests/: control.py  test_app.py  test_scheduler.py
tests/db/: test_db.py
